--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="viewport-fit=cover,width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta
+      name="viewport"
+      content="
+        width=device-width,
+        height=device-height,
+        initial-scale=1,
+        maximum-scale=1,
+        user-scalable=no
+      "
+    />
     <title>Image Compare</title>
   </head>
-  <body class="p-0 m-0 bg-gray-100 dark:bg-gray-900 dark:text-white overflow-hidden h-full">
+  <body
+    class="p-0 m-0 bg-gray-100 dark:bg-gray-900 dark:text-white"
+  >
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <noscript>
-        <p class="p-4 dark:text-white">This application requires JavaScript. 😿</p>
+      <p class="p-4 dark:text-white">This application requires JavaScript. 😿</p>
     </noscript>
   </body>
 </html>
