Fix "Viewport argument key "" not recognized and ignored." error.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         height=device-height,
         initial-scale=1,
         maximum-scale=1,
-        user-scalable=no
-      "
+        user-scalable=no"
     />
     <title>Image Compare</title>
   </head>
